Fix WYSIWYG menu spacing to match WordPress menus

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -924,13 +924,24 @@ img {
 
 /* Footer */
 
+#site-footer .footer-menu-wrapper,
+    .footer-links {
+  font-size: 17px;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(10 16 69 / var(--tw-text-opacity, 1));
+}
+
+#site-footer .footer-menu-wrapper p {
+  line-height: 2.75;
+  margin-bottom: 1rem;
+}
+
 .footer-links > li > a,
-    #site-footer ul > li > a {
+    #site-footer .footer-menu-wrapper li > a {
   display: block;
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-  font-size: 17px;
-  font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(10 16 69 / var(--tw-text-opacity, 1));
   text-decoration-line: none;
@@ -940,15 +951,20 @@ img {
 }
 
 .footer-links > li > a:hover,
-    #site-footer ul > li > a:hover {
+    #site-footer .footer-menu-wrapper li > a:hover {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity, 1));
 }
 
+#site-footer .footer-menu-wrapper li:not(:has(a)) {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 #site-footer .footer-menu-wrapper ul > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 /* Pagination */
